--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="geerthi.jpg" alt="Geerthiprofile picture" />
+        <img src="geerthi2.jpg" alt="Geerthiprofile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -193,9 +193,9 @@
                   alt="Experience icon"
                   class="icon"
                 />
-                <div>
-                  <h3>Cloud Services</h3>
-                  <p>Microsoft Azure, Repl.it, DevOps, Docker</p>
+                <div style="width: 280px;">
+                  <h3>Power Automate</h3>
+                  
                 </div>
               </article>
               <article>
@@ -277,25 +277,20 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="LMSapp.jpg"
                 alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">Project One - LMS app</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/GeerthiT/LMSwebapp.git'"
               >
                 Github
               </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
+              
             </div>
           </div>
           <div class="details-container color-container">
