--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
+          <li><a href="#competence">Competences</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -96,12 +96,14 @@
               <p>System Developer Python & IT security<br />Lexicon</p>
             </div>
           </div>
+          <br><br>
           <div class="text-container">
-            <p>
-                ISTQB certified software tester with 6 years’ experience in IT, working in various domains, performing a variety 
-                of roles like Test Engineer/Test Analyst. Have competence in Python along with specialization in Django. Quick learner and
-                 self-driven personality capable of delivering quality work, seeking a challenging opportunity to leverage my skills and
-                  experience in a dynamic environment.
+            <p><b><i>
+              ISTQB-certified software tester with a diverse background spanning multiple domains, including Banking and Utilities. 
+              Proficient in various roles such as Test Engineer and Test Analyst, with specialized expertise in Python, particularly in Django. 
+              Adept at quickly grasping new concepts and self-motivated to deliver high-quality work. 
+              Eager to take on challenging opportunities in a dynamic environment where I can leverage my skills and experiences effectively.
+            </b></i>
             </p>
           </div>
         </div>
@@ -110,10 +112,10 @@
         src="./assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
-        onclick="location.href='./#experience'"
+        onclick="scrollToContact()"
       />
     </section>
-    <section id="experience">
+    <section id="competence">
       <p class="section__text__p1">Explore My</p>
       <h1 class="title">Competences</h1>
       <div class="experience-details-container">
@@ -211,62 +213,14 @@
               </article>
             </div>
           </div>
- <!--         <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
-            <div class="article-container">
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>PostgreSQL</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Node JS</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Express JS</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Git</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-            </div>
-          </div> -->
+ 
         </div>
       </div>
       <img
         src="./assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
-        onclick="location.href='./#projects'"
+        onclick="scrollToContact()"
       />
     </section>
     <section id="projects">
@@ -337,8 +291,19 @@
         src="./assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
-        onclick="location.href='./#contact'"
-      />
+        onclick="scrollToContact()"
+        />
+        
+        <!-- JavaScript code -->
+        <script>
+        function scrollToContact() {
+            // Get the contact section
+            var contactSection = document.getElementById('contact');
+            
+            // Scroll to the contact section smoothly
+            contactSection.scrollIntoView({ behavior: 'smooth' });
+        }
+        </script>
     </section>
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
@@ -367,7 +332,7 @@
         <div class="nav-links-container">
           <ul class="nav-links">
             <li><a href="#about">About</a></li>
-            <li><a href="#experience">Experience</a></li>
+            <li><a href="#competence">Competences</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
