--- a/index.html
+++ b/index.html
@@ -47,13 +47,11 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/Geerthi Thirumavalavan_Resume.pdf')"
           >
             Download CV
           </button>
-          <button class="btn btn-color-1" onclick="location.href='./#contact'">
-            Contact Info
-          </button>
+          
         </div>
         <div id="socials-container">
           <img
@@ -83,8 +81,8 @@
                 alt="work icon"
                 class="icon"
               />
-              <h3>Experience</h3>
-              <p>6+ years <br />Software Testing - Manual & Automation</p>
+              <h2>Experience</h2>
+              <p><b>6+ years <br />Software Testing - Manual & Automation</p></b>
             </div>
             <div class="details-container">
               <img
@@ -92,8 +90,8 @@
                 alt="Education icon"
                 class="icon"
               />
-              <h3>Education</h3>
-              <p>System Developer Python & IT security<br />Lexicon</p>
+              <h2>Education</h2>
+              <p><b>System Developer Python & IT security<br />Lexicon</p></b>
             </div>
           </div>
           <br><br>
@@ -236,7 +234,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One - LMS app</h2>
+            <h2 class="experience-sub-title project-title">LMS app</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -255,7 +253,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two - Coffee webshop app(group project)</h2>
+            <h2 class="experience-sub-title project-title">Coffee webshop app(group project)</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
