--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       </div>
     </nav>
     <section id="profile">
-      <div class="section__pic-container">
-        <img src="geerthi2.jpg" alt="Geerthiprofile picture" />
+      <div class="section__pic-container circular-frame">
+        <img src="geerthi.jpg" alt="Geerthiprofile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
