--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Sanjivani-S/Coffee-Web-Shop-.git'"
+                onclick="location.href='https://github.com/GeerthiT/DjangoProject_Webshop'"
               >
                 Github
               </button>
